[project]
name = "homelab-assistant"
version = "1.3.0"
description = "HomeLab automation tools"
authors = [{ name = "Twalaght", email = "52785900+Twalaght@users.noreply.github.com" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "pydantic~=2.12",
    "PyYAML~=6.0",
    "requests~=2.32",
    "rich~=14.2",
    "rich-argparse~=1.7",
]

[project.optional-dependencies]
dev = [
    "flake8-assertive~=2.2",
    "flake8-docstrings~=1.7",
    "flake8-function-order>=0.0.5,<0.0.6",
    "flake8-pyproject~=1.2",
    "flake8~=7.3",
    "pep8-naming>=0.15,<0.16",
    "pre-commit-hooks~=6.0",
    "pre-commit~=4.3",
    "pydoclint>=0.7,<0.8",
    "ruff>=0.14,<0.15",
    "ty",
    "yamlfix~=1.19",
]

[project.scripts]
hl-assist = "homelab_assistant.main:main"

[tool.uv.build-backend]
module-name = "homelab_assistant"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.flake8]
max-line-length = 120

per-file-ignores = [
    "src/homelab_assistant/utils/logging.py:A003,A005,N802",  # A003 Class attribute is shadowing a Python builtin
                                                              # A005 The module is shadowing a Python builtin module
                                                              # N802 Function name should be lowercase
]

extend-ignore = [
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "CCE001",  # Wrong class attributes order
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in __init__
    "D210",    # No whitespaces allowed surrounding docstring text
    "DOC601",  # Class docstring contains fewer class attributes than actual class attributes.
    "DOC603",  # Class docstring attributes are different from actual class attributes.
]

style = "google"

import-order-style = "edited"
application-import-names = [
    "homelab_assistant",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
# Enable all linting options, then manually disable what is not required
select = ["ALL"]

ignore = [
    # Disable whole sets of rules
    "DTZ", # flake8-datetimez
    "EM",  # flake8-errmsg
    "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "T20", # flake8-print
    "TD",  # flake8-todos

    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed

    "C901", # Structure is too complex

    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "D210", # No whitespaces allowed surrounding docstring text

    "E701", # Multiple statements on one line (colon)

    "FIX002", # Line contains TODO, consider resolving the issue

    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison

    "PT006", # Wrong name(s) type in `@pytest.mark.parametrize`

    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF013", # PEP 484 prohibits implicit Optional

    "S105", # Possible hardcoded password assigned to variable
    "S106", # Possible hardcoded password assigned to argument

    "SLF001", # Private member accessed

    "TC006", # Add quotes to type expression in `typing.cast()`

    "TRY003", # Avoid specifying long messages outside the exception class
    "TRY301", # Abstract raise to an inner function

    "UP024", # Replace aliased errors with `OSError`
    "UP035", # Import from {target} instead: {names}
]

[tool.ruff.lint.isort]
# Enforces consistency with flake8 isort config
# See https://docs.astral.sh/ruff/settings/#lintisort
order-by-type = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.yamlfix]
allow_duplicate_keys = true
line_length = 120
none_representation = "null"
indent_mapping = 4
indent_offset = 0
indent_sequence = 4
explicit_start = false
preserve_quotes = true